objects/Group_Tax_ID__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Tax_ID__c</fullName>
        <formula>Tax_ID__r.Tax_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <description>It is the Group Associated with the Group Tax Id</description>
        <inlineHelpText>It defines the Group associated with the Group tax ids.</inlineHelpText>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Group Tax IDs</relationshipLabel>
        <relationshipName>Group_Tax_IDs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <description>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Used for data load, the CIP, and Open Enrollment processes that need to be maintained in the old Commercial ORG.</inlineHelpText>
        <label>SFDCLegacyID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax ID</label>
        <referenceTo>Tax_ID__c</referenceTo>
        <relationshipLabel>Group Tax IDs</relationshipLabel>
        <relationshipName>Group_Tax_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Group Tax ID</label>
    <nameField>
        <displayFormat>TCG-{0000}</displayFormat>
        <label>Group Tax ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Tax IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>